--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         </div>
     </section>
     <section class="third-view">
-        <h3>Servicios integrales</h3>
-        <p>Colaboramos estrechamente contigo para comprender tus metas y crear estrategias de marketing digital personalizadas. </p>
+        <!-- <h3>Servicios integrales</h3>
+        <p>Colaboramos estrechamente contigo para comprender tus metas y crear estrategias de marketing digital personalizadas. </p> -->
         <div class="servicios">
             <h3>Servicios</h3>
             <p>Nuestros servicios personalizadós optimizan tu presencia en línea. <br> ¡Potencia tu éxito ahora!</p>
@@ -57,34 +57,55 @@
                 <div class="servicio-individual">
                     <img src="/assets/iconos/digital.png" alt="">
                     <h3>Estrategias digitales</h3>
-                    <p>Identificamos tu público objetivo hasta el análisis competitivo, con estas bases creamos planes personalizados para tu éxito.</p>
+                    <br>
+                    <p>Identificamos tu público objetivo hasta el análisis competitivo, con estas bases creamos planes
+                        personalizados para tu éxito.</p>
                 </div>
                 <div class="servicio-individual">
                     <img src="/assets/iconos/www.png" alt="">
                     <h3>SEO (Optimización de Motores de Búsqueda)</h3>
-                    <p>Mejoramos tu visibilidad en línea con palabras clave, contenido optimizado y enlaces estratégicos. Atrae a tu público y escala posiciones en buscadores.</p>
+                    <p>Mejoramos tu visibilidad en línea con palabras clave, contenido optimizado y enlaces
+                        estratégicos. Atrae a tu público y escala posiciones en buscadores.</p>
                 </div>
                 <div class="servicio-individual">
                     <img src="/assets/iconos/sem.png" alt="">
                     <h3>SEM (Marketing en Motores de Búsqueda)</h3>
-                    <p>Administramos campañas publicitarias en Google, optimizando presupuestos y estrategias de palabras clave para atraer clientes potenciales de manera efectiva.</p>
+                    <p>Administramos campañas publicitarias en Google, optimizando presupuestos y estrategias de
+                        palabras clave para atraer clientes potenciales de manera efectiva.</p>
                 </div>
                 <div class="servicio-individual">
                     <img src="/assets/iconos/megafono.png" alt="">
                     <h3>Redes Sociales</h3>
-                    <p>Administramos redes sociales, creamos contenido y ejecutamos campañas publicitarias. Optimizamos tus campañas de pago para maximizar alcance y conversión.</p>
+                    <p>Administramos redes sociales, creamos contenido y ejecutamos campañas publicitarias. Optimizamos
+                        tus campañas de pago para maximizar alcance y conversión.</p>
                 </div>
                 <div class="servicio-individual">
                     <img src="/assets/iconos/email.png" alt="">
                     <h3>Email Marketing</h3>
-                    <p>Diseñamos y ejecutamos campañas de email marketing impactantes para mantener a tus clientes informados, comprometidos y listos para convertirse.</p>
+                    <p>Diseñamos y ejecutamos campañas de email marketing impactantes para mantener a tus clientes
+                        informados, comprometidos y listos para convertirse.</p>
                 </div>
                 <div class="servicio-individual">
                     <img src="/assets/iconos/diseno.png" alt="">
                     <h3>Diseño y Desarrollo Web</h3>
-                    <p>Creamos sitios web responsivos y optimizados para una experiencia excepcional. Garantizamos una presencia online efectiva.</p>
+                    <p>Creamos sitios web responsivos y optimizados para una experiencia excepcional. Garantizamos una
+                        presencia online efectiva.</p>
+                </div>
+                <div class="btn-first">
+                    <a href="#">Contáctanos</a>
                 </div>
             </div>
+        </div>
+    </section>
+    <section class="cmr">
+        <div class="left-cmr">
+            <img src="/assets/cmr.webp" alt="">
+        </div>
+        <div class="right-cmr">
+            <h3>¿Sabías que?</h3>
+            <p>
+                Implementamos un CRM de última generación para optimizar la gestión de leads y seguimientos. Mejora la
+                eficiencia y aumenta las oportunidades de venta de tu empresa.</p>
         </div>
     </section>
 </body>
