--- a/index.html
+++ b/index.html
@@ -108,6 +108,72 @@
                 eficiencia y aumenta las oportunidades de venta de tu empresa.</p>
         </div>
     </section>
+    <section class="nosotros">
+        <div class="contenido-nosotros">
+            <h3>
+                Nuestros tres pilares esenciales
+            </h3>
+            <div class="contenido-uno">
+                <h4>• Enfoque Estratégico Personalizado</h4>
+                <p>Trabajamos contigo para comprender tus objetivos, identificar
+                    desafíos específicos y desarrollar estrategias de marketing digital a tu medida.</p>
+            </div>
+            <div class="contenido-uno">
+                <h4>• Innovación y Adaptabilidad Continuas</h4>
+                <p>Nos mantenemos actualizados en las últimas tendencias y tecnologías del marketing digital. Nuestro
+                    equipo innovador garantiza que tu presencia en línea esté siempre a la vanguardia, proporcionándote
+                    una ventaja competitiva sostenible.</p>
+            </div>
+            <div class="contenido-uno">
+                <h4>• Resultados Medibles y Tangibles</h4>
+                <p>No hacemos promesas vacías. Implementamos estrategias basadas en datos y métricas concretas para
+                    garantizar resultados tangibles en cada campaña.</p>
+            </div>
+        </div>
+    </section>
+    <section class="sli">
+        <p class="texto-slider">Algunos de los clientes que han confiado en nosotros</p>
+        <div class="slider">
+            <div class="slide"><img src="/assets/Slider/271825016_448374683585863_5878743945213473720_n.webp" alt="Imagen 1"></div>
+            <div class="slide"><img src="/assets/Slider/295017143_453692236772189_2129288001315370503_n.webp" alt="Imagen 2"></div>
+            <div class="slide"><img src="/assets/Slider/geronimo.webp" alt="Imagen 3"></div>
+            <div class="slide"><img src="/assets/Slider/Logo 6.webp" alt="Imagen 4"></div>
+            <div class="slide"><img src="/assets/Slider/mon mapu logo alta.webp" alt="Imagen 5"></div>
+            <div class="slide"><img src="/assets/Slider/WhatsApp Image 2024-02-26 at 11_56_edited.webp" alt="Imagen 6"></div>
+          </div>
+    </section>
+    <div class="contacto-parrafo">
+        <h3>¿Aún no estás seguro? Contactanos para ofrecerte una asesoria personalizada y aclarar tus dudas</h3>
+    </div>
+    <section class="contacto">
+        <div class="formulario">
+            <form action="https://api.web3forms.com/submit" method="POST">
+                <input type="hidden" name="access_key" value="1c587cd2-b13e-4740-a055-2e3f1dc15c18">
+                <input type="text" name="nombre" required placeholder="Nombre">
+                <input type="email" name="email" required placeholder="Correo electrónico">
+                <input type="number" name="numero" required placeholder="Número de teléfono">
+                <input type="text" name="Asunto" required placeholder="Asunto del mensaje">
+                <textarea name="mensaje" id="" cols="30" rows="10" required placeholder="Mensaje"></textarea>
+                <input type="submit" class="btn-first" value="ENVIAR">
+            </form>
+        </div>
+        <div class="contacto-left">
+            <div class="icons">
+                <p>Dirección: Av. Los Rosales 122, 28021, Madrid.</p><br>
+                <p>Email: info@misitio.com</p><br>
+                <p>Teléfono: 914-123-456</p>
+                <div class="iconos">
+                    <a href="#"><img src="/assets/icons/instagram.png" alt=""></a>
+                    <a href="mailto:info@misitio.com"><img src="/assets/icons/email.png" alt=""></a>
+                    <a href="tel:+34914123456"><img src="/assets/icons/telefono.png" alt=""></a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer>
+        ©Impulso360 todos los derechos reservados
+    </footer>
+    <script src="script.js"></script>
 </body>
 
 </html>
