--- a/index.html
+++ b/index.html
@@ -131,16 +131,51 @@
             </div>
         </div>
     </section>
+    <section class="nosotros-dos">
+        <div class="contenido-nosotros">
+            <h3>
+
+                Preguntas frecuentes
+            </h3>
+            <div class="contenido-uno">
+                <h4>¿En qué consiste la consultoría de marketing digital que ofrecen?</h4>
+                <p>Nuestra consultoría abarca desde el desarrollo de estrategias digitales personalizadas hasta la
+                    implementación efectiva de CRM. Ofrecemos soluciones integrales para mejorar la presencia en línea y
+                    optimizar la gestión de clientes.</p>
+            </div>
+            <div class="contenido-uno">
+                <h4>¿Cómo determinan cuáles son las estrategias más adecuadas para mi empresa?</h4>
+                <p>Realizamos una consulta detallada para comprender tus objetivos y desafíos. Luego, desarrollamos
+                    estrategias adaptadas, utilizando herramientas como SEO local, publicidad en redes sociales y
+                    contenido personalizado.</p>
+            </div>
+            <div class="contenido-uno">
+                <h4>¿Por qué es importante la implementación de CRM en conjunto con las estrategias de marketing
+                    digital?</h4>
+                <p>La implementación de CRM potencia la gestión de clientes, centraliza la información y mejora la
+                    personalización de las campañas. Esto maximiza la eficiencia y efectividad de las estrategias
+                    digitales.</p>
+            </div>
+            <div class="contenido-uno">
+                <h4>¿Cuánto tiempo lleva ver resultados tangibles en las campañas de marketing digital?</h4>
+                <p>El tiempo puede variar, pero generalmente se pueden esperar resultados tangibles en los primeros
+                    meses. Nos esforzamos por lograr una implementación eficiente para obtener beneficios rápidos.</p>
+            </div>
+        </div>
+    </section>
     <section class="sli">
         <p class="texto-slider">Algunos de los clientes que han confiado en nosotros</p>
         <div class="slider">
-            <div class="slide"><img src="/assets/Slider/271825016_448374683585863_5878743945213473720_n.webp" alt="Imagen 1"></div>
-            <div class="slide"><img src="/assets/Slider/295017143_453692236772189_2129288001315370503_n.webp" alt="Imagen 2"></div>
+            <div class="slide"><img src="/assets/Slider/271825016_448374683585863_5878743945213473720_n.webp"
+                    alt="Imagen 1"></div>
+            <div class="slide"><img src="/assets/Slider/295017143_453692236772189_2129288001315370503_n.webp"
+                    alt="Imagen 2"></div>
             <div class="slide"><img src="/assets/Slider/geronimo.webp" alt="Imagen 3"></div>
             <div class="slide"><img src="/assets/Slider/Logo 6.webp" alt="Imagen 4"></div>
             <div class="slide"><img src="/assets/Slider/mon mapu logo alta.webp" alt="Imagen 5"></div>
-            <div class="slide"><img src="/assets/Slider/WhatsApp Image 2024-02-26 at 11_56_edited.webp" alt="Imagen 6"></div>
-          </div>
+            <div class="slide"><img src="/assets/Slider/WhatsApp Image 2024-02-26 at 11_56_edited.webp" alt="Imagen 6">
+            </div>
+        </div>
     </section>
     <div class="contacto-parrafo">
         <h3>¿Aún no estás seguro? Contactanos para ofrecerte una asesoria personalizada y aclarar tus dudas</h3>
