--- a/index.html
+++ b/index.html
@@ -47,6 +47,15 @@
             <img src="/assets/perro.png" alt="">
         </div>
     </section>
+    <section class="second-view-dos">
+        <div class="second-dos-left">
+            <img src="/assets/personas.webp" alt="">
+        </div>
+        <div class="second-dos-right">
+            <h3>Desde la adquisición hasta la fidelización, nuestra estrategia cubre los 360° para una gestión de
+                clientes sin fisuras</h3>
+        </div>
+    </section>
     <section class="third-view">
         <!-- <h3>Servicios integrales</h3>
         <p>Colaboramos estrechamente contigo para comprender tus metas y crear estrategias de marketing digital personalizadas. </p> -->
@@ -73,23 +82,27 @@
                     <p>Administramos campañas publicitarias en Google, optimizando presupuestos y estrategias de
                         palabras clave para atraer clientes potenciales de manera efectiva.</p>
                 </div>
-                <div class="servicio-individual">
-                    <img src="/assets/iconos/megafono.png" alt="">
-                    <h3>Redes Sociales</h3>
-                    <p>Administramos redes sociales, creamos contenido y ejecutamos campañas publicitarias. Optimizamos
-                        tus campañas de pago para maximizar alcance y conversión.</p>
-                </div>
-                <div class="servicio-individual">
-                    <img src="/assets/iconos/email.png" alt="">
-                    <h3>Email Marketing</h3>
-                    <p>Diseñamos y ejecutamos campañas de email marketing impactantes para mantener a tus clientes
-                        informados, comprometidos y listos para convertirse.</p>
-                </div>
-                <div class="servicio-individual">
-                    <img src="/assets/iconos/diseno.png" alt="">
-                    <h3>Diseño y Desarrollo Web</h3>
-                    <p>Creamos sitios web responsivos y optimizados para una experiencia excepcional. Garantizamos una
-                        presencia online efectiva.</p>
+                <div class="servicios-abajo">
+                    <div class="servicio-individual">
+                        <img src="/assets/iconos/megafono.png" alt="">
+                        <h3>Redes Sociales</h3>
+                        <p>Administramos redes sociales, creamos contenido y ejecutamos campañas publicitarias.
+                            Optimizamos
+                            tus campañas de pago para maximizar alcance y conversión.</p>
+                    </div>
+                    <div class="servicio-individual">
+                        <img src="/assets/iconos/email.png" alt="">
+                        <h3>Email Marketing</h3>
+                        <p>Diseñamos y ejecutamos campañas de email marketing impactantes para mantener a tus clientes
+                            informados, comprometidos y listos para convertirse.</p>
+                    </div>
+                    <div class="servicio-individual">
+                        <img src="/assets/iconos/diseno.png" alt="">
+                        <h3>Diseño y Desarrollo Web</h3>
+                        <p>Creamos sitios web responsivos y optimizados para una experiencia excepcional. Garantizamos
+                            una
+                            presencia online efectiva.</p>
+                    </div>
                 </div>
                 <div class="btn-first">
                     <a href="#">Contáctanos</a>
@@ -110,56 +123,67 @@
     </section>
     <section class="nosotros">
         <div class="contenido-nosotros">
-            <h3>
-                Nuestros tres pilares esenciales
-            </h3>
             <div class="contenido-uno">
-                <h4>• Enfoque Estratégico Personalizado</h4>
-                <p>Trabajamos contigo para comprender tus objetivos, identificar
-                    desafíos específicos y desarrollar estrategias de marketing digital a tu medida.</p>
+                <div class="nosotros-titulo"><img src="/assets/iconos/nivel.png" alt="">
+                    <h4>01 - CONECTAMOS</h4>
+                </div>
+                <p>"Descubre una conexión genuina desde nuestro primer encuentro. Escuchamos tus aspiraciones para
+                    convertirlas en la esencia de tu estrategia personalizada. Como parte de tu equipo, te sentirás en
+                    casa."</p>
             </div>
             <div class="contenido-uno">
-                <h4>• Innovación y Adaptabilidad Continuas</h4>
-                <p>Nos mantenemos actualizados en las últimas tendencias y tecnologías del marketing digital. Nuestro
-                    equipo innovador garantiza que tu presencia en línea esté siempre a la vanguardia, proporcionándote
-                    una ventaja competitiva sostenible.</p>
+                <div class="nosotros-titulo"><img src="/assets/iconos/corazon.png" alt="">
+                    <h4>02 - IDEAMOS</h4>
+                </div>
+                <p>"Innovamos a partir de tu visión. Te entregaremos una propuesta que no solo se ajuste a tus
+                    necesidades actuales, sino que también abra caminos hacia el futuro de tu marca."</p>
             </div>
             <div class="contenido-uno">
-                <h4>• Resultados Medibles y Tangibles</h4>
-                <p>No hacemos promesas vacías. Implementamos estrategias basadas en datos y métricas concretas para
-                    garantizar resultados tangibles en cada campaña.</p>
+                <div class="nosotros-titulo"><img src="/assets/iconos/cara.png" alt="">
+                    <h4>03 - ACTUAMOS</h4>
+                </div>
+                <p>"Con tu aprobación, activamos nuestra estrategia con agilidad y transparencia. Tu proyecto cobra vida
+                    a través de actualizaciones constantes, ajustándonos a cada paso para alinearnos con tus metas."</p>
+            </div>
+            <div class="contenido-uno">
+                <div class="nosotros-titulo"><img src="/assets/iconos/destello.png" alt="">
+                    <h4>04 - CUMPLIMOS</h4>
+                </div>
+                <p>"Superamos expectativas, no solo con resultados, sino con insights que marcan el camino a seguir. Te
+                    ofrecemos un despliegue de éxitos y aprendizajes, asegurando un impacto duradero y significativo."
+                </p>
             </div>
         </div>
     </section>
     <section class="nosotros-dos">
         <div class="contenido-nosotros">
             <h3>
-
-                Preguntas frecuentes
+                Todo lo que Quieres Saber
             </h3>
             <div class="contenido-uno">
                 <h4>¿En qué consiste la consultoría de marketing digital que ofrecen?</h4>
-                <p>Nuestra consultoría abarca desde el desarrollo de estrategias digitales personalizadas hasta la
-                    implementación efectiva de CRM. Ofrecemos soluciones integrales para mejorar la presencia en línea y
-                    optimizar la gestión de clientes.</p>
+                <p>Analizamos en profundidad <span>tu negocio</span> para forjar estrategias digitales a medida que
+                    conecten con tu
+                    <span>audiencia</span> y maximicen tu retorno de <span>inversión</span>.
+                </p>
             </div>
             <div class="contenido-uno">
                 <h4>¿Cómo determinan cuáles son las estrategias más adecuadas para mi empresa?</h4>
-                <p>Realizamos una consulta detallada para comprender tus objetivos y desafíos. Luego, desarrollamos
-                    estrategias adaptadas, utilizando herramientas como SEO local, publicidad en redes sociales y
-                    contenido personalizado.</p>
-            </div>
-            <div class="contenido-uno">
-                <h4>¿Por qué es importante la implementación de CRM en conjunto con las estrategias de marketing
-                    digital?</h4>
-                <p>La implementación de CRM potencia la gestión de clientes, centraliza la información y mejora la
-                    personalización de las campañas. Esto maximiza la eficiencia y efectividad de las estrategias
-                    digitales.</p>
+                <p>Mediante el análisis de tu industria y <span>metas</span> específicas, <span>diseñamos</span> y
+                    aplicamos tácticas de
+                    marketing digital únicas que resuenan y <span>convierten</span></p>
             </div>
             <div class="contenido-uno">
                 <h4>¿Cuánto tiempo lleva ver resultados tangibles en las campañas de marketing digital?</h4>
-                <p>El tiempo puede variar, pero generalmente se pueden esperar resultados tangibles en los primeros
-                    meses. Nos esforzamos por lograr una implementación eficiente para obtener beneficios rápidos.</p>
+                <p>Los primeros frutos se ven generalmente en <span>tres meses</span>, con un compromiso hacia un
+                    <span>crecimiento</span>
+                    robusto y sostenido que refuerce tu <span>presencia</span> digital.</p>
+            </div>
+            <div class="contenido-uno">
+                <h4>¿Cómo se determina el costo de sus servicios de marketing digital?</h4>
+                <p>Nos enfocamos en empresas <span>emergentes</span>, y pymes , ofreciendo precios <span>competitivos</span> y ajustando
+                    costos según tus necesidades. Brindamos <span>soluciones</span> personalizadas para optimizar tu <span>inversión</span>.
+                </p>
             </div>
         </div>
     </section>
