--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <!-- Estructura del menú -->
     <ul class="menu">
-        <div class="logo"><img src="/assets/logo.webp" alt="logo principal"></div>
+        <div class="logo"><img src="/assets/logo.png" alt="logo principal"></div>
         <div class="content-header">
             <li><a href="#">Inicio</a></li>
             <li><a href="#">Servicios</a></li>
@@ -108,17 +108,6 @@
                     <a href="#">Contáctanos</a>
                 </div>
             </div>
-        </div>
-    </section>
-    <section class="cmr">
-        <div class="left-cmr">
-            <img src="/assets/cmr.webp" alt="">
-        </div>
-        <div class="right-cmr">
-            <h3>¿Sabías que?</h3>
-            <p>
-                Implementamos un CRM de última generación para optimizar la gestión de leads y seguimientos. Mejora la
-                eficiencia y aumenta las oportunidades de venta de tu empresa.</p>
         </div>
     </section>
     <section class="nosotros">
