--- a/index.html
+++ b/index.html
@@ -104,13 +104,19 @@
                             presencia online efectiva.</p>
                     </div>
                 </div>
-                <div class="btn-first">
-                    <a href="#">Contáctanos</a>
+                <div class="texto-contacto">
+                    <div class="titulo-btn">
+                        <h3>¿Preparado para revolucionar tu marketing digital?</h3>
+                    </div>
+                    <div class="btn-first">
+                        <a href="#">Activa Tu Éxito Digital Hoy</a>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
     <section class="nosotros">
+        <div class="titulo-nosotros"><h3>Por Qué Elegirnos</h3></div>
         <div class="contenido-nosotros">
             <div class="contenido-uno">
                 <div class="nosotros-titulo"><img src="/assets/iconos/nivel.png" alt="">
@@ -166,12 +172,15 @@
                 <h4>¿Cuánto tiempo lleva ver resultados tangibles en las campañas de marketing digital?</h4>
                 <p>Los primeros frutos se ven generalmente en <span>tres meses</span>, con un compromiso hacia un
                     <span>crecimiento</span>
-                    robusto y sostenido que refuerce tu <span>presencia</span> digital.</p>
+                    robusto y sostenido que refuerce tu <span>presencia</span> digital.
+                </p>
             </div>
             <div class="contenido-uno">
                 <h4>¿Cómo se determina el costo de sus servicios de marketing digital?</h4>
-                <p>Nos enfocamos en empresas <span>emergentes</span>, y pymes , ofreciendo precios <span>competitivos</span> y ajustando
-                    costos según tus necesidades. Brindamos <span>soluciones</span> personalizadas para optimizar tu <span>inversión</span>.
+                <p>Nos enfocamos en empresas <span>emergentes</span>, y pymes , ofreciendo precios
+                    <span>competitivos</span> y ajustando
+                    costos según tus necesidades. Brindamos <span>soluciones</span> personalizadas para optimizar tu
+                    <span>inversión</span>.
                 </p>
             </div>
         </div>
@@ -191,7 +200,8 @@
         </div>
     </section>
     <div class="contacto-parrafo">
-        <h3>¿Aún no estás seguro? Contactanos para ofrecerte una asesoria personalizada y aclarar tus dudas</h3>
+        <h3>Hablemos de tu futuro digital. Deja tus detalles y nos pondremos en contacto contigo para una sesión de
+            estrategia personalizada</h3>
     </div>
     <section class="contacto">
         <div class="formulario">
