--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
     <ul class="menu">
         <div class="logo"><img src="/assets/logo.png" alt="logo principal"></div>
         <div class="content-header">
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#">Servicios</a></li>
-            <li><a href="#">Quienes somos</a></li>
-            <li><a href="#">Contacto</a></li>
+            <li><a href="#inicio">Inicio</a></li>
+            <li><a href="#servicios">Servicios</a></li>
+            <li><a href="#nosotros">Quienes somos</a></li>
+            <li><a href="#contacto">Contacto</a></li>
         </div>
     </ul>
-    <section class="first-view">
+    <section class="first-view" id="inicio">
         <div class="contenedor">
             <div class="text">
                 <h1>En Impulso 360</h1>
                 <h2>comienza tu transformación digital hoy</h2>
             </div>
             <div class="btn-first">
-                <a href="#">Comienza ahora</a>
+                <a href="#contacto">Comienza ahora</a>
             </div>
         </div>
     </section>
@@ -40,7 +40,7 @@
             <h3>Impulso 360 es una agencia global de branding y crecimiento digital</h3>
             <p>Creamos contenido estratégico y dinámico, perfectamente adaptado a eso que tienes en mente</p>
             <div class="btn-first">
-                <a href="#">Hablemos</a>
+                <a href="#contacto">Hablemos</a>
             </div>
         </div>
         <div class="second-right">
@@ -59,7 +59,7 @@
     <section class="third-view">
         <!-- <h3>Servicios integrales</h3>
         <p>Colaboramos estrechamente contigo para comprender tus metas y crear estrategias de marketing digital personalizadas. </p> -->
-        <div class="servicios">
+        <div class="servicios" id="servicios">
             <h3>Servicios</h3>
             <p>Nuestros servicios personalizadós optimizan tu presencia en línea. <br> ¡Potencia tu éxito ahora!</p>
             <div class="contenedores-servicios">
@@ -71,10 +71,10 @@
                         personalizados para tu éxito.</p>
                 </div>
                 <div class="servicio-individual">
-                    <img src="/assets/iconos/www.png" alt="">
-                    <h3>SEO (Optimización de Motores de Búsqueda)</h3>
-                    <p>Mejoramos tu visibilidad en línea con palabras clave, contenido optimizado y enlaces
-                        estratégicos. Atrae a tu público y escala posiciones en buscadores.</p>
+                    <img src="/assets/iconos/ai.png" alt="">
+                    <h3>Automatización de Marketing Digital</h3>
+                    <p>Deja atrás las tareas repetitivas. Nuestra automatización potente libera tu tiempo, permitiéndote
+                        enfocarte en estrategias creativas mientras tu marketing trabaja por ti.</p>
                 </div>
                 <div class="servicio-individual">
                     <img src="/assets/iconos/sem.png" alt="">
@@ -109,14 +109,16 @@
                         <h3>¿Preparado para revolucionar tu marketing digital?</h3>
                     </div>
                     <div class="btn-first">
-                        <a href="#">Activa Tu Éxito Digital Hoy</a>
+                        <a href="#contacto">Activa Tu Éxito Digital Hoy</a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <section class="nosotros">
-        <div class="titulo-nosotros"><h3>Por Qué Elegirnos</h3></div>
+    <section class="nosotros" id="nosotros">
+        <div class="titulo-nosotros">
+            <h3>Por Qué Elegirnos</h3>
+        </div>
         <div class="contenido-nosotros">
             <div class="contenido-uno">
                 <div class="nosotros-titulo"><img src="/assets/iconos/nivel.png" alt="">
@@ -199,14 +201,14 @@
             </div>
         </div>
     </section>
-    <div class="contacto-parrafo">
-        <h3>Hablemos de tu futuro digital. Deja tus detalles y nos pondremos en contacto contigo para una sesión de
-            estrategia personalizada</h3>
+    <div class="contacto-parrafo" id="contacto">
+        <h3><span>¿Listo para convertir?</span><br>Potencia tu marketing digital</h3>
+        <img src="/assets/fotofoto.png" alt="persona">
     </div>
-    <section class="contacto">
+    <section class="contacto" >
         <div class="formulario">
             <form action="https://api.web3forms.com/submit" method="POST">
-                <input type="hidden" name="access_key" value="1c587cd2-b13e-4740-a055-2e3f1dc15c18">
+                <input type="hidden" name="access_key" value="1de9682c-7112-4046-909e-f90875bac3cd">
                 <input type="text" name="nombre" required placeholder="Nombre">
                 <input type="email" name="email" required placeholder="Correo electrónico">
                 <input type="number" name="numero" required placeholder="Número de teléfono">
@@ -218,12 +220,12 @@
         <div class="contacto-left">
             <div class="icons">
                 <p>Dirección: Av. Los Rosales 122, 28021, Madrid.</p><br>
-                <p>Email: info@misitio.com</p><br>
-                <p>Teléfono: 914-123-456</p>
+                <p>Email: gjorqueraguerra@gmail.com</p><br>
+                <p>Teléfono: +56 9 8829 3714</p>
                 <div class="iconos">
-                    <a href="#"><img src="/assets/icons/instagram.png" alt=""></a>
-                    <a href="mailto:info@misitio.com"><img src="/assets/icons/email.png" alt=""></a>
-                    <a href="tel:+34914123456"><img src="/assets/icons/telefono.png" alt=""></a>
+                    <a href="https://www.instagram.com/impulso360.oficial/?igsh=MWtoZTg5YTIzdGpnZQ%3D%3D"><img src="/assets/icons/instagram.png" alt=""></a>
+                    <a href="mailto:gjorqueraguerra@gmail.com"><img src="/assets/icons/email.png" alt=""></a>
+                    <a href="tel:+56988293714"><img src="/assets/icons/telefono.png" alt=""></a>
                 </div>
             </div>
         </div>
