--- a/index.html
+++ b/index.html
@@ -223,9 +223,11 @@
                 <p>Email: gjorqueraguerra@gmail.com</p><br>
                 <p>Teléfono: +56 9 8829 3714</p>
                 <div class="iconos">
-                    <a href="https://www.instagram.com/impulso360.oficial/?igsh=MWtoZTg5YTIzdGpnZQ%3D%3D"><img src="/assets/icons/instagram.png" alt=""></a>
+                    <a href="https://www.instagram.com/impulso360.oficial/"><img src="/assets/icons/instagram.png" alt=""></a>
                     <a href="mailto:gjorqueraguerra@gmail.com"><img src="/assets/icons/email.png" alt=""></a>
                     <a href="tel:+56988293714"><img src="/assets/icons/telefono.png" alt=""></a>
+                    <a href="https://bit.ly/impulso360"><img src="/assets/icons/whatsapp.png" alt=""></a>
+                    <a href="https://www.facebook.com/impulso360.oficial"><img src="/assets/icons/facebook.png" alt=""></a>
                 </div>
             </div>
         </div>
