--- a/index.html
+++ b/index.html
@@ -219,8 +219,7 @@
         </div>
         <div class="contacto-left">
             <div class="icons">
-                <p>Dirección: Av. Los Rosales 122, 28021, Madrid.</p><br>
-                <p>Email: gjorqueraguerra@gmail.com</p><br>
+                <p>Dirección: Santiago de Chile.</p><br>
                 <p>Teléfono: +56 9 8829 3714</p>
                 <div class="iconos">
                     <a href="https://www.instagram.com/impulso360.oficial/"><img src="/assets/icons/instagram.png" alt=""></a>
