--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <h3>Impulso 360 es una agencia global de branding y crecimiento digital</h3>
             <p>Creamos contenido estratégico y dinámico, perfectamente adaptado a eso que tienes en mente</p>
             <div class="btn-first">
-                <a href="#contacto">Hablemos</a>
+                <a href="https://bit.ly/impulso360">Hablemos</a>
             </div>
         </div>
         <div class="second-right">
@@ -109,7 +109,7 @@
                         <h3>¿Preparado para revolucionar tu marketing digital?</h3>
                     </div>
                     <div class="btn-first">
-                        <a href="#contacto">Activa Tu Éxito Digital Hoy</a>
+                        <a href="https://bit.ly/impulso360">Activa Tu Éxito Digital Hoy</a>
                     </div>
                 </div>
             </div>
